My OLS code added

--- a/main.ipynb
+++ b/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -18,12 +18,13 @@
        "(84, 2)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from mymodel import linear_model\n",
     "import pandas as pd\n",
     "\n",
     "data = pd.read_csv('LinearRegressionData.csv')\n",
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +101,7 @@
        "4  1693  2.83"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +163,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -354,6 +355,42 @@
     "\n",
     "#view model summary\n",
     "print(model.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X is      SAT\n",
+      "3   1685\n",
+      "4   1693\n",
+      "5   1670\n",
+      "6   1764\n",
+      "7   1764\n",
+      "..   ...\n",
+      "79  1936\n",
+      "80  1810\n",
+      "81  1987\n",
+      "82  1962\n",
+      "83  2050\n",
+      "\n",
+      "[81 rows x 1 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#define response variable\n",
+    "y = data_clean['GPA']\n",
+    "\n",
+    "#define explanatory variable\n",
+    "x = data_clean[['SAT']]\n",
+    "\n",
+    "linear_model(x,y)"
    ]
   },
   {
