--- a/main.ipynb
+++ b/main.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        "4  1693  2.83"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
        "(81, 2)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -313,8 +313,8 @@
       "Dep. Variable:                    GPA   R-squared:                       0.402\n",
       "Model:                            OLS   Adj. R-squared:                  0.395\n",
       "Method:                 Least Squares   F-statistic:                     53.15\n",
-      "Date:                Thu, 23 Dec 2021   Prob (F-statistic):           2.07e-10\n",
-      "Time:                        10:48:57   Log-Likelihood:                 28.779\n",
+      "Date:                Tue, 28 Dec 2021   Prob (F-statistic):           2.07e-10\n",
+      "Time:                        14:34:04   Log-Likelihood:                 28.779\n",
       "No. Observations:                  81   AIC:                            -53.56\n",
       "Df Residuals:                      79   BIC:                            -48.77\n",
       "Df Model:                           1                                         \n",
@@ -359,38 +359,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X is      SAT\n",
-      "3   1685\n",
-      "4   1693\n",
-      "5   1670\n",
-      "6   1764\n",
-      "7   1764\n",
-      "..   ...\n",
-      "79  1936\n",
-      "80  1810\n",
-      "81  1987\n",
-      "82  1962\n",
-      "83  2050\n",
-      "\n",
-      "[81 rows x 1 columns]\n"
+      "0.0013600349643199286\n",
+      "0.8451649391628875\n"
      ]
     }
    ],
    "source": [
-    "#define response variable\n",
-    "y = data_clean['GPA']\n",
+    "# best equation line parameters using own linear model\n",
     "\n",
-    "#define explanatory variable\n",
-    "x = data_clean[['SAT']]\n",
+    "df1_x=data_clean.iloc[:,[0]]\n",
+    "df1_y=data_clean.iloc[:,[1]]\n",
     "\n",
-    "linear_model(x,y)"
+    "result = linear_model(df1_x,df1_y)"
    ]
   },
   {
